@@ -1,0 +1,2 @@
+127.0.0.0	 localhost
+192.168.1.244	 rtems		# ip address of webserver
